# kube-eye-frontend-server

./: .gitignore  Cargo.toml  Config.toml.tamplate  Cross.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: master.yml  release-docker.yml  release.yml
assets/default/template/: template.typ
assets/templates/: template.typ
configs/: Config.template.toml
examples/: client_config.yaml  local_client_config.yaml
examples/demo/: .gitignore  Dockerfile  docker.Config.toml.template  local.Config.toml.template  main.rs
report/: README.md  all-in-one-lite.bundle.js  pdf.html
report/vendors/: typst_ts_renderer_bg.wasm
src/: api.rs  auth.rs  client_config.rs  config.rs  error.rs  extractor.rs  lib.rs  main.rs  run.rs  server.rs  typst_lib.rs
tests/: integration_test.rs
