[package]
name = "kube-eye-frontend-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-util = { version = "0.7.13" }
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header", "file-stream"] }
bytes = "1.10.0"
color-eyre = "0.6.3"
figment = { version = "0.10.19", features = ["env", "toml"] }
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
snafu = { version = "0.8.5" }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
typst = "0.13.0"
typst-as-lib = "0.14.1"
