[package]
name = "kube-eye-export-server"
version = "0.1.2"
edition = "2024"

[dependencies]
tokio-util = { version = "0.7.15" }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header", "file-stream"] }
bytes = "1.10.1"
color-eyre = "0.6.4"
figment = { version = "0.10.19", features = ["env", "toml", "yaml"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
snafu = { version = "0.8.5" }
tokio = { version = "1.45.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
typst = "0.13.1"
typst-pdf = "0.13.1"
# typst-as-library = { git = "https://github.com/tfachmann/typst-as-library.git", branch = "main"}
percent-encoding = "2.3.1"
typst-as-lib = { version = "0.14.3", features = ["typst-kit-fonts"] }
notify = "8.2.0"
arc-swap = "1.7.1"

[profile.release]
opt-level = "s"   # 最小体积优化
lto = true        # 启用链接时优化
panic = "abort"   # 移除 panic 信息
strip = true      # 移除符号信息
debug = false     # 禁用调试信息
codegen-units = 1 # 减少编译单元数量

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
